# GestureReconstruction

./: .gitignore  CMakeLists.txt  README.md  gesture_acts.cpp  gesture_acts.h  gesture_db.cpp  gesture_db.h  main.cpp
src/: gesture_acts.cpp  gesture_acts.h  gesture_db.cpp  gesture_db.h  gesture_reconstruct.cpp  gesture_reconstruct.h  samsung.h
